fix: empty table header spacing

--- a/src/table/table.styl
+++ b/src/table/table.styl
@@ -23,6 +23,7 @@
     justify-content space-between
     position sticky
     left 23px
+    margin-left 23px
     width fit-content
     padding-top 12px
     padding-bottom 8px
